[package]
edition = "2024"
name = "bevy_world_space_ui"
version = "0.1.3"
authors = ["Josiah Putman <joshikatsu@gmail.com>"]
description = "Make building world space UIs easier in Bevy game engine."
documentation = "https://docs.rs/bevy_world_space_ui/latest/bevy_world_space_ui"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Katsutoshii/bevy_world_space_ui"
repository = "https://github.com/Katsutoshii/bevy_world_space_ui"
keywords = ["bevy"]
readme = "README.md"
exclude = ["assets/*"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "bevy_asset",
    "bevy_image",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_ui",
    "bevy_window",
] }

[dev-dependencies]
bevy = { version = "0.16" }

[[example]]
name = "render_ui_on_quad"

[[example]]
name = "render_ui_on_two_quads"
